Fix modal not clickable when overlap with top bar

--- a/apps/app/public/sass/base/_global.scss
+++ b/apps/app/public/sass/base/_global.scss
@@ -464,3 +464,7 @@ input[type="text"] {
     color: #bbb;
   }
 }
+
+.ant-modal-content {
+  -webkit-app-region: no-drag;
+}
